# rs-command

./: Cargo.toml  README.md  README.zh_CN.md  align-ci.sh  ci-check.sh  coverage.sh  format.sh  rustfmt.toml
.circleci/: config.yml
src/: command.rs  command_env.rs  command_error.rs  command_output.rs  command_runner.rs  command_spec.rs  command_stdin.rs  coverage_support.rs  lib.rs  output_stream.rs
src/command_runner/: captured_output.rs  command_io.rs  error_mapping.rs  finished_command.rs  managed_child_process.rs  output_capture_error.rs  output_capture_options.rs  output_collector.rs  output_reader.rs  output_tee.rs  prepared_command.rs  process_launcher.rs  process_setup.rs  running_command.rs  stdin_pipe.rs  stdin_writer.rs  wait_policy.rs
src/coverage_support/: defensive_paths.rs  failing_flush.rs  failing_reader.rs  failing_write.rs  fake_child_guard.rs  no_stdin_child.rs  synthetic_children.rs
tests/: command_error_tests.rs  command_output_tests.rs  command_runner_tests.rs  command_stdin_tests.rs  command_tests.rs  coverage_support_tests.rs  lib_tests.rs  mod.rs  output_stream_tests.rs  windows_command_runner_tests.rs
tests/command/: command_runner_tests.rs  command_spec_tests.rs  mod.rs
tests/command_runner/: captured_output_tests.rs  command_io_tests.rs  finished_command_tests.rs  managed_child_process_tests.rs  output_capture_error_tests.rs  output_capture_options_tests.rs  output_reader_tests.rs  output_tee_tests.rs  running_command_tests.rs  stdin_writer_tests.rs
tests/coverage_support/: failing_flush_tests.rs  failing_reader_tests.rs  failing_write_tests.rs  fake_child_guard_tests.rs  no_stdin_child_tests.rs
