[package]
name = "qubit-command"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-command"
description = "Command-line process running utilities for Qubit Rust projects"
homepage = "https://github.com/qubit-ltd/rs-command"
documentation = "https://docs.rs/qubit-command"
readme = "README.md"
keywords = ["command", "process", "shell", "utility", "qubit"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_command"
doctest = true

[dependencies]
log = "0.4"
thiserror = "2.0"
