[package]
name = "qubit-command"
version = "0.2.2"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-command"
description = "Command-line process running utilities for Rust"
homepage = "https://github.com/qubit-ltd/rs-command"
documentation = "https://docs.rs/qubit-command"
readme = "README.md"
keywords = ["command", "process", "shell", "utility", "qubit"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "align-ci.sh",
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    ".rs-ci/**",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_command"
doctest = true

[dependencies]
log = "0.4"
process-wrap = { version = "9.1", default-features = false, features = ["std", "process-group", "job-object"] }
thiserror = "2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
